tests/baselines/reference/parserObjectCreationArrayLiteral2.errors.txt
==== tests/cases/compiler/parserObjectCreationArrayLiteral2.ts (1 errors) ====
    new Foo[1];
        ~~~
!!! parserObjectCreationArrayLiteral2.ts(1,5): error TS2095: Cannot find name 'Foo'.